# Polygonization

./: CMakeLists.txt  main.cpp
ConvexHull/: ConvexHull.cpp  ConvexHull.hpp
Point/: Point2D.cpp  Point2D.hpp  Point3D.cpp  Point3D.hpp
QuickHull/: QuickHull.cpp  QuickHull.hpp
